--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Pacifico" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" 
-  rel="stylesheet" 
-  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" 
-  crossorigin="anonymous">
+    rel="stylesheet" 
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" 
+    crossorigin="anonymous">
   <title>Color Predict</title>
 </head>
 
 <body>
   <div id="root">not rendered</div>
-  <script src="./App.js"></script>
+  <script src="./EntryPoint.js"></script>
 </body>
 
 </html>
