--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root">not rendered</div>
-  <script src="./EntryPoint.js"></script>
+  <script src="./EntryPointClient.js"></script>
 </body>
 
 </html>
